seaqt/QtMultimedia/gen_qmediaobject.h

class QMediaObject;
class QMediaService;
class QMetaObject;
class QObject;
class QVariant;
typedef struct QMediaObject QMediaObject;
typedef struct QMediaService QMediaService;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QVariant QVariant;
QMetaObject* QMediaObject_metaObject(const QMediaObject* self);
void* QMediaObject_metacast(QMediaObject* self, const char* param1);
int QMediaObject_metacall(QMediaObject* self, int param1, int param2, void** param3);
struct seaqt_string QMediaObject_tr_s(const char* s);
struct seaqt_string QMediaObject_trUtf8_s(const char* s);
bool QMediaObject_isAvailable(const QMediaObject* self);
int QMediaObject_availability(const QMediaObject* self);
QMediaService* QMediaObject_service(const QMediaObject* self);
int QMediaObject_notifyInterval(const QMediaObject* self);
void QMediaObject_setNotifyInterval(QMediaObject* self, int milliSeconds);
bool QMediaObject_bind(QMediaObject* self, QObject* param1);
void QMediaObject_unbind(QMediaObject* self, QObject* param1);
bool QMediaObject_isMetaDataAvailable(const QMediaObject* self);
QVariant* QMediaObject_metaData(const QMediaObject* self, struct seaqt_string key);
struct seaqt_array /* of struct seaqt_string */  QMediaObject_availableMetaData(const QMediaObject* self);
void QMediaObject_notifyIntervalChanged(QMediaObject* self, int milliSeconds);
void QMediaObject_connect_notifyIntervalChanged(QMediaObject* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QMediaObject_metaDataAvailableChanged(QMediaObject* self, bool available);
void QMediaObject_connect_metaDataAvailableChanged(QMediaObject* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
void QMediaObject_metaDataChanged(QMediaObject* self);
void QMediaObject_connect_metaDataChanged(QMediaObject* self, intptr_t slot, void (*callback)(intptr_t), void (*release)(intptr_t));
void QMediaObject_metaDataChanged_key_value(QMediaObject* self, struct seaqt_string key, QVariant* value);
void QMediaObject_connect_metaDataChanged_key_value(QMediaObject* self, intptr_t slot, void (*callback)(intptr_t, struct seaqt_string, QVariant*), void (*release)(intptr_t));
void QMediaObject_availabilityChanged_available(QMediaObject* self, bool available);
void QMediaObject_connect_availabilityChanged_available(QMediaObject* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
void QMediaObject_availabilityChanged_availability(QMediaObject* self, int availability);
void QMediaObject_connect_availabilityChanged_availability(QMediaObject* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
struct seaqt_string QMediaObject_tr_s_c(const char* s, const char* c);
struct seaqt_string QMediaObject_tr_s_c_n(const char* s, const char* c, int n);
struct seaqt_string QMediaObject_trUtf8_s_c(const char* s, const char* c);
struct seaqt_string QMediaObject_trUtf8_s_c_n(const char* s, const char* c, int n);
const QMetaObject* QMediaObject_staticMetaObject();